src/Components/Styles/Movieinfo.css
:root {
  --font-small: 0.9rem;
}

.movie--info--container {
  height: 100vh;
}

.movie--info {
  padding: 2rem;
  background: radial-gradient(45.72% 45.72% at 52.4% 54.28%,
      #f8c9dfed 0%,
      #dfb6f5 100%);
  display: grid;
  grid-template-columns: repeat(1, 100%);
  place-items: center center;
  gap: 1.5rem;
  text-align: center;
  height: 100vh;
  width: 100%;
}

.add--info {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.plot--info {
  width: 90%;
  margin: 0 auto;
}

.rating--comp {
  margin: 0 auto;
}

.poster--img {
  width: 350px;
  height: 350px;
  box-shadow: 1px 1px 15px 3px rgba(0, 0, 0, 0.2);
}

.poster--img>img {
  width: 100%;
  object-fit: contain;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);
}

.add--info:not(h1) {
  font-size: var(--font-small);
}

@media (width >=1000px) {
  .movie--info {
    --font-small: 1.1rem;
    grid-template-columns: repeat(2, 1fr);
    gap: 0rem;
    text-align: left;
  }

  .poster--img {
    width: 450px;
    height: 450px;
  }

  .plot--info {
    width: 100%;
    margin: 0;
  }

  .rating--comp {
    margin: 0;
  }
}

